--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^0.27.2",
-    "crypto-js": "^4.1.1"
+    "crypto-js": "^4.1.1",
+    "moment": "^2.29.3"
   },
   "devDependencies": {
     "dotenv": "^16.0.1"
