--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "axios": "^0.27.2",
     "crypto-js": "^4.1.1",
+    "inquirer": "^8.2.4",
     "moment": "^2.29.3"
   },
   "devDependencies": {
